# AI-Native-Book

./: .env  package-lock.json  package.json  vercel.json
.specify/memory/: constitution.md
Backend/: .env  .env.example  app.py  config.py  main.py  pyproject.toml  requirements.txt
Backend/api/: __init__.py  routes.py  schemas.py
Backend/rag/: __init__.py  service.py
Frontend/: README.md  docusaurus.config.ts  package-lock.json  package.json  rag-ui-test.md  vercel.json
Frontend/docs/: intro.md
Frontend/docs/module-1-ros2/: 03-python-rclpy-bridge.md  _category_.json
Frontend/docs/module-2-digital-twin/: 01-introduction-digital-twins.md  02-physics-simulation-gazebo.md  03-simulating-sensors.md  (+1 more)
docs/module-1-ros2/: 01-introduction-ros2.md  02-nodes-topics-services.md  04-urdf-humanoid-robots.md
docs/module-2-digital-twin/: _category_.json
examples/module-1/: minimal_publisher.py  minimal_subscriber.py  service_client.py  simple_humanoid.urdf  simple_service.py
history/adr/: ADR-001-module-1-content-architecture.md
specs/001-ros2-module/: content-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-digital-twin-module/: plan.md  spec.md  tasks.md
specs/003-rag-ingestion-pipeline/: data-model.md  plan.md  quickstart.md  research.md  spec.md
specs/004-rag-retrieval-api/: plan.md  spec.md  tasks.md
specs/005-rag-llm-endpoint/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-rag-web-ui/: contracts.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+50 files in other folders)
