[project]
name = "rag-ingestion-pipeline"
version = "0.1.0"
description = "RAG ingestion pipeline for AI-Native Textbook"
requires-python = ">=3.11"
dependencies = [
  "cohere>=5.0.0",
  "qdrant-client>=1.7.0",
  "httpx>=0.25.0",
  "beautifulsoup4>=4.12.0",
  "python-dotenv>=1.0.0",
  "tenacity>=8.2.0",
  "fastapi>=0.110.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-mock>=3.10.0",
    "httpx>=0.25.0",
    "fastapi>=0.110.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build.targets.sdist]
include = ["main.py"]
